--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/tabungan
+spring.datasource.username=triandamai
+spring.datasource.password=trian
 
+#`hibernate_sequence' doesn't exist
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8000
+spring.jpa.open-in-view=false
