--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tabungan
-spring.datasource.username=triandamai
-spring.datasource.password=trian
+spring.datasource.username=citizix_user
+spring.datasource.password=An0thrS3crt
 
 #`hibernate_sequence' doesn't exist
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8000
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
