--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tabungan
-spring.datasource.username=citizix_user
-spring.datasource.password=An0thrS3crt
+spring.datasource.url=jdbc:mysql://localhost:3306/db_cashier
+spring.datasource.username=trian-user
+spring.datasource.password=password
 
 #`hibernate_sequence' doesn't exist
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
